# cxx-modules-sandbox

./: .cirrus.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README  README.md  build-env.sh  import.cpp  install_build2.sh  install_clang.sh  install_cmake.sh  install_deps.sh  install_gcc.sh  install_ninja.sh  tests.lua  trtbd.diff  xmake.lua
.github/ci/: cmake.ps1
.github/workflows/: cmake.yml  xmake.yml
duplicates/: CMakeLists.txt  duplicate.mpp  modules.cpp  xmake.lua
duplicates-same-dir/: CMakeLists.txt  duplicate.cpp  xmake.lua
good-scanner/: CMakeLists.txt  define.cpp  export-define.cpp  export-define.mpp  export.mpp  header-import.cpp  import-define.cpp  import.cpp  macro-messiness.mpp  mod.cpp  mod.mpp  multi-line.cpp  other.mpp  xmake.lua
header-units/: CMakeLists.txt  xmake.lua
header-units/internal/: CMakeLists.txt  module.h  module.mpp  xmake.lua
link-use/: CMakeLists.txt  use.cpp  xmake.lua
link-use-mask/: CMakeLists.txt  xmake.lua
msvc-naming/: CMakeLists.txt  consume.cpp  iface.ixx  other_iface.cppm
named/: CMakeLists.txt  build-gnu-moddir.bash  build-gnu.bash  build-msvc-explicit.bash  build-msvc-moddir.bash  build-msvc.bash  clean.bash  depmodule1.cpp  depmodule2.cpp  main.cpp  mymodule.cpp  mymodule_impl.cpp  mymodule_part.cpp  mymodule_part_impl.cpp  mymodule_part_internal.cpp  scan-msvc.bash  xmake.lua
partitions/: CMakeLists.txt  impl.cpp  module.cpp  module.mpp  parta.cpp  parta.mpp  partb.cpp  xmake.lua
simple/: CMakeLists.txt  another.cpp  duplicate.mpp  module.cpp  use.cpp  use.mpp  xmake.lua
xmake/: export.h.in
